@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-08T02:05:44Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 4,
+  "timestamp" : "2022-05-08T08:28:00Z",
+  "count" : 1,
+  "count_minmax" : [ 0, 1 ],
+  "count_prev_day_inc" : 5,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 1,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
 }
