@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T02:05:44Z",
+  "timestamp" : "2022-05-08T08:28:00Z",
   "count_outdated" : 19,
   "uniques_outdated" : 4,
-  "count" : 27,
-  "uniques" : 7,
+  "count" : 28,
+  "uniques" : 8,
   "views" : [
     {
       "timestamp": "2022-04-28T00:00:00Z",
@@ -23,6 +23,13 @@
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 4,
       "count_minmax": [ 0, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
