@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 3,
   "views": [
     {
@@ -15,6 +15,11 @@
     {
       "timestamp": "2022-05-07T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-08T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
