@@ -1,3 +1,9 @@
+2022-05-08T08:28:00Z:
+* notice: last 14d: all unq: 9 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 19 4 / 27 7
+* notice: next accum: outdated-all outdated-unq / all unq: 19 4 / 28 8
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +2 +5 / -0 -0
+
 2022-05-08T02:05:44Z:
 * notice: last 14d: all unq: 8 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 19 4 / 23 6
